@@ -1,0 +1,13 @@
+.TH SNDFILE-PLAY 1 "October 5, 2009"
+.SH NAME
+sndfile-jackplay \- play a sound file via the JACK sound server
+.SH SYNOPSIS
+.B sndfile-jackplay
+.RI file
+.SH DESCRIPTION
+sndfile-jackplay plays the specified sound file via the JACK sound server.
+It uses libsndfile (http://www.mega-nerd.com/libsndfile/)
+to read the file.
+.SH AUTHOR
+This manual page was written by Erik de Castro Lopo <erikd@mega-nerd.com>.
+
